--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -3,19 +3,21 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: #b5b4b4;
+  color: #4c4c4c;
   flex-direction: column;
 }
 
 .container {
-  margin: 20px auto;
-
+  margin: 20px 0;    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nav-bar {
   width: 100%;
   position: sticky;
-  background-color: #797979;
+  background-color: #d6d6d6;
   box-shadow: #0000001f 0 1px 8px;
   display: flex;
   justify-content: space-between;
@@ -23,10 +25,18 @@ body {
 }
 
 .logo img {
-  width: 60px;
-  margin: 5px 30px;
+  width: 90px;
+  margin: 0 30px;
 }
 
 .user-container {
   margin: 20px;
+}
+
+.container img {
+  width: 500px;
+}
+
+.reviews {
+  display: flex;
 }
