--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,3 +40,23 @@ body {
 .reviews {
   display: flex;
 }
+
+button {
+  background-color: #717171;
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  height: 35px;
+  color: #dbdbdb;
+  font-weight: 700;
+  margin: 10px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #4c4c4c;
+}
+
+.review-card {
+  padding: 15px;
+}
