--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -87,3 +87,12 @@ button:hover {
 .card-property img {
   width: 100%;
 }
+
+.footer {
+  width: 100%;
+  background-color: #c7c7c7;
+  bottom: 0;
+  text-align: center;
+  padding: 30px 0;
+  /* color: #d6d6d6; */
+}
